--- a/app/src/main/res/layout/fragment1.xml
+++ b/app/src/main/res/layout/fragment1.xml
@@ -3,43 +3,237 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" >
 
-    <TextView
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="사과 Table"
-        android:layout_margin="15dp"
-        android:textSize="8pt"
-        android:textColor="#000c6b"
-        android:textStyle="bold" />
+        android:layout_weight="1"
+        android:layout_gravity="center"
+        android:orientation="vertical">
+        <Button
+            android:id="@+id/table1"
+            android:layout_width="350dp"
+            android:layout_height="wrap_content"
+            android:text="사과 Table"
+            android:layout_margin="5dp"
+            android:textSize="8pt"
+            android:textColor="#000c6b"
+            android:textStyle="bold" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="포도 Table"
-        android:layout_margin="15dp"
-        android:textSize="8pt"
-        android:textColor="#000c6b"
-        android:textStyle="bold"/>
+        <Button
+            android:id="@+id/table2"
+            android:layout_width="350dp"
+            android:layout_height="wrap_content"
+            android:text="포도 Table"
+            android:layout_margin="5dp"
+            android:textSize="8pt"
+            android:textColor="#000c6b"
+            android:textStyle="bold"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="키위 Table"
-        android:layout_margin="15dp"
-        android:textSize="8pt"
-        android:textColor="#000c6b"
-        android:textStyle="bold"/>
+        <Button
+            android:id="@+id/table3"
+            android:layout_width="350dp"
+            android:layout_height="wrap_content"
+            android:text="키위 Table"
+            android:layout_margin="5dp"
+            android:textSize="8pt"
+            android:textColor="#000c6b"
+            android:textStyle="bold"/>
 
-    <TextView
-        android:layout_width="wrap_content"
+        <Button
+            android:id="@+id/table4"
+            android:layout_width="350dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:text="자몽 Table"
+            android:textColor="#000c6b"
+            android:textSize="8pt"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <TableLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="자몽 Table"
-        android:layout_margin="15dp"
-        android:textSize="8pt"
-        android:textColor="#000c6b"
-        android:textStyle="bold"/>
+        android:layout_weight="1">
+        <TableRow>
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="테이블명"
+                android:textSize="10pt"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                tools:layout_editor_absoluteX="16dp"
+                tools:layout_editor_absoluteY="115dp" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="---"
+                android:textSize="10pt"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="40dp"
+                tools:layout_editor_absoluteX="16dp"
+                tools:layout_editor_absoluteY="155dp" />
+        </TableRow>
+
+        <TableRow>
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="입장시간"
+                android:textSize="10pt"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                tools:layout_editor_absoluteX="0dp"
+                tools:layout_editor_absoluteY="218dp" />
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="---"
+                android:textSize="10pt"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="40dp"
+                tools:layout_editor_absoluteX="109dp"
+                tools:layout_editor_absoluteY="115dp" />
+        </TableRow>
+
+        <TableRow>
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="스파게티"
+                android:textSize="10pt"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                tools:layout_editor_absoluteX="111dp"
+                tools:layout_editor_absoluteY="155dp" />
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="---"
+                android:textSize="10pt"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="40dp"
+                tools:layout_editor_absoluteX="125dp"
+                tools:layout_editor_absoluteY="218dp" />
+        </TableRow>
+
+        <TableRow>
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="피자"
+                android:textSize="10pt"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                tools:layout_editor_absoluteX="111dp"
+                tools:layout_editor_absoluteY="155dp" />
+
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="---"
+                android:textSize="10pt"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="40dp"
+                tools:layout_editor_absoluteX="125dp"
+                tools:layout_editor_absoluteY="218dp" />
+        </TableRow>
+
+        <TableRow>
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="맴버쉽카드"
+                android:textSize="10pt"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                tools:layout_editor_absoluteX="111dp"
+                tools:layout_editor_absoluteY="155dp" />
+
+            <TextView
+                android:id="@+id/textView10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="---"
+                android:textSize="10pt"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="40dp"
+                tools:layout_editor_absoluteX="125dp"
+                tools:layout_editor_absoluteY="218dp" />
+        </TableRow>
+
+        <TableRow>
+            <TextView
+                android:id="@+id/textView11"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="가격"
+                android:textSize="10pt"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                tools:layout_editor_absoluteX="111dp"
+                tools:layout_editor_absoluteY="155dp" />
+
+            <TextView
+                android:id="@+id/textView12"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="---"
+                android:textSize="10pt"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="40dp"
+                tools:layout_editor_absoluteX="125dp"
+                tools:layout_editor_absoluteY="218dp" />
+        </TableRow>
+
+
+
+        <TableRow
+            android:gravity="center">
+            <Button
+                android:id="@+id/button"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:text="새 주문"
+                android:textSize="7pt"
+                tools:layout_editor_absoluteX="34dp"
+                tools:layout_editor_absoluteY="422dp" />
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:text="정보수정"
+                android:textSize="7pt"
+                tools:layout_editor_absoluteX="138dp"
+                tools:layout_editor_absoluteY="411dp" />
+
+            <Button
+                android:id="@+id/button3"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:text="초기화"
+                android:textSize="7pt"
+                tools:layout_editor_absoluteX="239dp"
+                tools:layout_editor_absoluteY="419dp" />
+        </TableRow>
+
+    </TableLayout>
 
 
 </LinearLayout>
